# Nutria-DB

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker-setup/: init_and_run.sh  init_database.sh  nginx-app.conf  supervisor-app.conf  uwsgi-app.ini
nutriaDB/: manage.py
nutriaDB/backend/: helpers.py  models.py  tests.py
nutriaDB/backend/management/commands/: initadmin.py  initial_data.py  list_categories.py
nutriaDB/backend/migrations/: 0001_initial.py  0002_auto_20181204_1624.py  0002_serving.py  0003_creation_date_default.py
nutriaDB/binaryAPI/: apps.py  tests.py  urls.py  views.py
nutriaDB/binaryAPI/fixtures/: broetchen.json
nutriaDB/jsonAPI/: apps.py  helpers.py  tests.py  urls.py  views.py
nutriaDB/jsonAPI/fixtures/: broetchen.json  knappe_rezepte.json
nutriaDB/nutriaDB/: middleware.py  settings.py  urls.py  wsgi.py
nutriaDB/openfoodfacts/: apps.py  tests.py  urls.py  views.py
